--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-	<h1>This is a Heading</h1>
+	<header>This is a Heading</header>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
