--- a/main.html
+++ b/main.html
@@ -8,9 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-	<header>This is a Heading</header>
-	</div>
+	<div>This is a Heading</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
