--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
 	<div>This is a Heading</div>
+		</header>
     <script type="text/javascript" src="./script.js">
 </script>
 
